Croppie Fixes

--- a/public_html/css/compiled/app.css
+++ b/public_html/css/compiled/app.css
@@ -7888,7 +7888,8 @@ body[id*="Trident/7.0"] .box {
     .update-profile-photo__draggable-area-block .croppie-container .cr-slider-wrap {
       margin-top: 3rem; }
 
-.update-profile-photo__draggable-area {
+.update-profile-photo__draggable-area,
+.update-profile-photo__croppie-wrapper {
   position: absolute;
   top: 0;
   left: 0;
