--- a/public_html/scss/molecules/update-profile-photo.scss
+++ b/public_html/scss/molecules/update-profile-photo.scss
@@ -134,7 +134,8 @@
 
 }
 
-.update-profile-photo__draggable-area {
+.update-profile-photo__draggable-area,
+.update-profile-photo__croppie-wrapper {
     position: absolute;
     top: 0;
     left: 0;
